--- a/styles/search.scss
+++ b/styles/search.scss
@@ -11,6 +11,7 @@ body{
         width: 900px;
         height: 60px;
         display: inline;
+        text-decoration: none;
 
         input[type=text]{
             width: 600px;
