--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,24 +3,20 @@ $fontInter : inter, sans-serif;
 $fontManrope : manrope, sans-serif;
 $fontOpenSans : open-sans, sans-serif;
 
-@import './search.scss';
 
 body{
    
     margin: 0%;
     padding: 0%;
     width: 100%;
-    #vedio-div{
-        height: 100%;
 
-        #myVideo{
-            width: 100%; 
-            height: 100%;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
+    #myVideo{
+        width: 100%; 
+        height: 100%;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     
     #content{
@@ -30,60 +26,34 @@ body{
         display: table;
         clear: both;
 
-        #left-logo{
-            clear: both;
+        .top-nav {
+            overflow: hidden;
             content: '';
+            clear: both;
             display: table;
             width: 100%;
 
-            #logo{
+            .left{
+                width: 20%;
                 float: left;
-                margin: 30px 0px 0px 70px ;
-                height: 70px;
             }
 
-            .hamburger{
+            .right{
                 float: right;
-                width: 45%;
-                margin: 50px 70px 0px 0px ;
-
-                // #header-menu{
-                //     display: none;
-                // }
-
+                width: 60%;
                 
-                #menu{
-                    float: right;
-                    width: 50px;
-
-                    i{
-                        font-size: 25px;
-                        color: white;
-                    }
+                a {
+                    float: left;
+                    color: #ffffff;
+                    text-align: center;
+                    padding: 14px 16px;
+                    text-decoration: none;
+                    font-size: 17px;
                 }
 
-                li{
-                    display: inline;
-                    padding: 0px 5px;
-
-                    a{
-                        font-family: $fontMonstserrat;
-                        font-weight: 900;
-                        font-size: 15px;
-                        padding: 0px 5px;
-                        color: white;
-                        text-decoration: none;
-                        cursor: pointer;
-                    }
-    
-                    a:hover{
-                        text-decoration: underline;
-                        color: rgb(33, 14, 110);
-
-                    }
-
+                #icon {
+                    display: none;
                 }
-                
             }
         }
     }
@@ -420,19 +390,53 @@ body{
 @media (max-width:684px){
     body{
         #content{
-            #left-logo{
-                .hamburger{
-                    width: 77%;
-                    margin-right: 30px;
+            .top-nav {
+                .left{
+                    width: 22%;
+                }
+    
+                .right{
+                    width: 62%;
+                    
+                    a {
+                        display: none;
+                    }
+    
+                    #icon {
+                        display: block;
+                        float: right;
+                    }
                 }
 
-                #header-menu{
-                    li{
-                        a{
-                            font-size: 12px;
-                        }
+                .right.responsive{
+                    margin-top: 30px;
+                    background-color: rgba(68, 65, 65, 0.343);
+                    position: relative;
+                    width: 200px;
+                    z-index: 1;
+
+                    a {
+                        display: block;
+                        text-align: left;
                     }
-                    
+                    #icon {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                    }
+                }
+            }
+            .top-nav.responsive{
+                .right{
+                    .icon {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                    } 
+                    a{
+                        display: block;
+                        text-align: left;
+                    }
                 }
             }
         }
@@ -467,21 +471,7 @@ body{
 @media (max-width:667px){
     body{
         #content{
-            #left-logo{
-                .hamburger{
-                    width: 77%;
-                    margin-right: 30px;
-                    margin-top: 40px;
-                }
-                #header-menu{
-                    li{
-                        a{
-                            font-size: 12px;
-                        }
-                    }
-                    
-                }
-            }
+          
         }
         #center-content{
             a{
@@ -502,7 +492,6 @@ body{
             }
         }
     }
-}
 
 @media (max-width:425px){
     body{
@@ -568,4 +557,5 @@ body{
             }
         }
     }
+}
 }
